--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "author": "harsh",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "nodemon": "^2.0.18"
-  }
+  },
+  "description": ""
 }
